--- a/i18n/notifications/en.json
+++ b/i18n/notifications/en.json
@@ -17,19 +17,21 @@
 	"bs-social-notifications-email-comment-delete-subject": "User {{GENDER:$1|$2 deleted}} a comment",
 	"bs-social-notifications-email-comment-delete-body": "User {{GENDER:$1|$2 deleted}} a comment on post by $3",
 	"bs-social-notifications-web-comment-delete-body": "User {{GENDER:$1|$2 deleted}} a comment on post by $3",
+	"bs-social-notifications-comment-edit-bundle": "User {{GENDER:$2|$3 edited}} a comment {{PLURAL:$1|$1 time|$1 times}}",
 
 	"bs-social-notifications-comment-owner-create": "User {{GENDER:$1|$2 made}} a new comment on your post",
 	"bs-social-notifications-email-comment-owner-create-subject": "User {{GENDER:$1|$2 made}} a new comment on your post",
-	"bs-social-notifications-email-comment-owner-create-body": "User {{GENDER:$1|$2 commented}} on your post with following text:\n$4",
+	"bs-social-notifications-email-comment-owner-create-body": "User {{GENDER:$1|$2 commented}} on your post with following text:\n$3",
 	"bs-social-notifications-web-comment-owner-create-body": "User {{GENDER:$1|$2 commented}} on your post",
 	"bs-social-notifications-comment-owner-edit": "User {{GENDER:$1|$2 edited}} a comment on your post",
 	"bs-social-notifications-email-comment-owner-edit-subject": "User {{GENDER:$1|$2 edited}} a comment on your post",
-	"bs-social-notifications-email-comment-owner-edit-body": "User {{GENDER:$1|$2 edited}} a comment on on your post. New comment is:\n$4",
+	"bs-social-notifications-email-comment-owner-edit-body": "User {{GENDER:$1|$2 edited}} a comment on on your post. New comment is:\n$3",
 	"bs-social-notifications-web-comment-owner-edit-body": "User {{GENDER:$1|$2 edited}} a comment on your post",
 	"bs-social-notifications-comment-owner-delete": "User {{GENDER:$1|$2 deleted}} a comment on your post",
 	"bs-social-notifications-email-comment-owner-delete-subject": "User {{GENDER:$1|$2 deleted}} a comment on your post",
 	"bs-social-notifications-email-comment-owner-delete-body": "User {{GENDER:$1|$2 deleted}} a comment on your post",
 	"bs-social-notifications-web-comment-owner-delete-body": "User {{GENDER:$1|$2 deleted}} a comment on your post",
+	"bs-social-notifications-comment-owner-edit-bundle": "User {{GENDER:$2|$3 edited}} a comment on your post {{PLURAL:$1|$1 time|$1 times}}",
 	"bs-social-notification-comment-primary-link-label": "View comment",
 	"bs-social-notification-comment-parentowner-label": "Post creator: $1",
 	"bs-social-notification-comment-parententity-label": "View post"
