--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,7 +7,7 @@
 	"bs-socialcomments-desc": "BSSocial",
 	"bs-socialcomments-type": "Comment",
 	"bs-socialcomments-commenttext": "{{plural:$1|Comment|Comments}}($1)",
-	"bs-socialcomments-header-create": "New comment",
+	"bs-socialcomments-header-create": "Comment",
 	"bs-socialcomments-header": "[[User:$1|$2]] commented \"[[$6|$7]]\"",
 	"bs-socialcomments-var-commentcount": "Comment count"
 }
