--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,7 +4,7 @@
 			"Patric Wirth <wirth@hallowelt.com>"
 		]
 	},
-	"bs-socialcomments-desc": "BSSocial",
+	"bs-socialcomments-desc": "Comment functionality for social",
 	"bs-socialcomments-type": "Comment",
 	"bs-socialcomments-commenttext": "{{plural:$1|Comment|Comments}}($1)",
 	"bs-socialcomments-header-create": "Comment",
