Sync I18N from master
Change-Id: Ibd1fe73039bbd81902a0e8f35f7ed72441539a5f

--- a/i18n/mk.json
+++ b/i18n/mk.json
@@ -9,5 +9,6 @@
 	"bs-socialcomments-header-create": "Коментар",
 	"bs-social-notification-comment-primary-link-label": "Прегледај коментар",
 	"bs-social-notification-comment-parentowner-label": "Создател на објавата: $1",
-	"bs-social-notification-comment-parententity-label": "Прегледај објава"
+	"bs-social-notification-comment-parententity-label": "Прегледај објава",
+	"bs-social-notifications-email-comment-create-subject": "Корисникот {{GENDER:$1|$2 направи}} нов коментар"
 }
