Sync I18N from master

--- a/i18n/ja.json
+++ b/i18n/ja.json
@@ -1,8 +1,10 @@
 {
 	"@metadata": {
 		"authors": [
+			"LaMagiaaa",
 			"Omotecho"
 		]
 	},
-	"echo-category-title-bs-social-comment-cat": "ウォッチ中の項目に関するコメント"
+	"echo-category-title-bs-social-comment-cat": "ウォッチ中の項目に関するコメント",
+	"bs-socialcomments-var-commentcount": "コメント数"
 }
