Sync I18N from master

--- a/i18n/da.json
+++ b/i18n/da.json
@@ -5,5 +5,6 @@
 		]
 	},
 	"bs-social-notification-comment-primary-link-label": "Vis kommentar",
-	"bs-social-notification-comment-parententity-label": "Vis indlæg"
+	"bs-social-notification-comment-parententity-label": "Vis indlæg",
+	"bs-social-notifications-email-comment-edit-subject": "Bruger {{GENDER:$1|$2 redigerede}} en kommentar"
 }
