Sync I18N from master

--- a/i18n/ia.json
+++ b/i18n/ia.json
@@ -15,5 +15,28 @@
 	"bs-social-notifications-web-comment-owner-delete-body": "Le usator {{GENDER:$1|$2 ha delite}} un commento sur tu entrata",
 	"bs-social-notifications-comment-owner-edit-bundle": "Le commentos sur tu entrata ha essite modificate {{PLURAL:$1|$1 vice|$1 vices}}",
 	"bs-social-notification-comment-primary-link-label": "Vider commento",
-	"bs-social-notification-comment-parententity-label": "Vider entrata"
+	"bs-social-notification-comment-parententity-label": "Vider entrata",
+	"bs-socialcomments-desc": "Functionalitate de commentos pro BlueSpiceSocial",
+	"bs-socialcomments-commenttext": "{{PLURAL:$1|Commento|Commentos}} ($1)",
+	"bs-socialcomments-header": "[[User:$1|$2]] ha commentate \"[[$6|$7]]\"",
+	"bs-socialcomments-var-commentcount": "Numero de commentos",
+	"echo-category-title-bs-social-comment-cat": "Commentos sur entitates sub observation",
+	"bs-social-notifications-email-comment-create-subject": "Le usator {{GENDER:$1|$2 ha facite}} un nove commento",
+	"bs-social-notifications-email-comment-create-body": "Le usator {{GENDER:$1|$2 ha commentate}} un articulo de $3 con le sequente texto:\n\n$4",
+	"bs-social-notifications-web-comment-create-body": "Le usator {{GENDER:$1|$2 ha commentate}} un articulo de $3",
+	"bs-social-notifications-comment-edit": "Le usator {{GENDER:$1|$2 ha modificate}} un commento",
+	"bs-social-notifications-email-comment-edit-body": "Le usator {{GENDER:$1|$2 ha modificate}} un commento sur un articulo de $3. Le nove commento es:\n$4",
+	"bs-social-notifications-web-comment-edit-body": "Le usator {{GENDER:$1|$2 ha modificate}} un commento sur un articulo de $3",
+	"bs-social-notifications-email-comment-delete-subject": "Le usator {{GENDER:$1|$2 ha delite}} un commento",
+	"bs-social-notifications-email-comment-delete-body": "Le usator {{GENDER:$1|$2 ha delite}} un commento sur un articulo de $3",
+	"bs-social-notifications-email-comment-owner-create-subject": "Le usator {{GENDER:$1|$2 ha facite}} un nove commento sur tu articulo",
+	"bs-social-notifications-email-comment-owner-create-body": "Le usator {{GENDER:$1|$2 ha facite}} un nove commento sur tu articulo con le sequente texto:\n$3",
+	"bs-social-notifications-web-comment-owner-create-body": "Le usator {{GENDER:$1|$2 ha commentate}} tu articulo",
+	"bs-social-notifications-comment-owner-edit": "Le usator {{GENDER:$1|$2 ha modificate}} un commento sur tu articulo",
+	"bs-social-notifications-email-comment-owner-edit-body": "Le usator {{GENDER:$1|$2 ha modificate}} un commento sur tu articulo. Le nove commento es:\n$3",
+	"bs-social-notifications-web-comment-owner-edit-body": "Le usator {{GENDER:$1|$2 ha modificate}} un commento sur tu articulo",
+	"bs-social-notifications-comment-owner-delete": "Le usator {{GENDER:$1|$2 ha delite}} un commento sur tu articulo",
+	"bs-social-notifications-email-comment-owner-delete-subject": "Le usator {{GENDER:$1|$2 ha delite}} un commento sur tu articulo",
+	"bs-social-notifications-email-comment-owner-delete-body": "Le usator {{GENDER:$1|$2 ha delite}} un commento sur tu articulo",
+	"bs-social-notification-comment-parentowner-label": "Creator del articulo: $1"
 }
