Sync I18N from master

--- a/i18n/es.json
+++ b/i18n/es.json
@@ -1,6 +1,7 @@
 {
 	"@metadata": {
 		"authors": [
+			"DiegoAmbrocio",
 			"Fitoschido",
 			"MarcoAurelio"
 		]
@@ -9,5 +10,6 @@
 	"bs-socialcomments-header-create": "Respuesta aquí...",
 	"bs-socialcomments-var-commentcount": "Recuento de comentarios",
 	"bs-social-notification-comment-primary-link-label": "Ver comentario",
-	"bs-social-notification-comment-parententity-label": "Ver publicación"
+	"bs-social-notification-comment-parententity-label": "Ver publicación",
+	"echo-category-title-bs-social-comment-cat": "Comentarios sobre las entidades vigiladas"
 }
