--- a/i18n/es.json
+++ b/i18n/es.json
@@ -1,9 +1,9 @@
 {
 	"@metadata": {
 		"authors": [
+			"DiegoAmbrocio",
 			"Fitoschido",
-			"MarcoAurelio",
-			"DiegoAmbrocio"
+			"MarcoAurelio"
 		]
 	},
 	"bs-socialcomments-type": "Comentario",
