Fix comment notifications
[4.5.x]

ERM35557

Change-Id: I5fe2a8c98131515be2aec185271f0c45acf60fcd
(cherry picked from commit 5807e4662bd1d41fc4cd51e447df034137f37324)
(cherry picked from commit 9bc43eb0fc2528d6496ab828a43e6bd899f5416d)

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -22,5 +22,12 @@
 	"bs-social-comment-event-delete": "{{GENDER:$1|deleted a comment}} on a page you are watching",
 	"bs-social-comment-event-delete-desc": "Comment deleted",
 	"bs-social-comment-event-own-delete": "{{GENDER:$1|deleted a comment}} on your post",
-	"bs-social-comment-event-own-delete-desc": "Comment on your post deleted"
+	"bs-social-comment-event-own-delete-desc": "Comment on your post deleted",
+	"bs-social-notification-comment-primary-link-label": "View comment",
+	"bs-social-comment-for-user-event-create": "{{GENDER:$1|left a comment}} on your user page",
+	"bs-social-comment-for-user-event-create-desc": "New comment on your user page",
+	"bs-social-comment-for-user-event-edit": "{{GENDER:$1|edited a comment}} on your user page",
+	"bs-social-comment-for-user-event-edit-desc": "Comment on your user page edited",
+	"bs-social-comment-for-user-event-delete": "{{GENDER:$1|deleted a comment}} on your user page",
+	"bs-social-comment-for-user-event-delete-desc": "Comment on your user page deleted"
 }
